# Pepper-Mining

./: LICENSE.txt  README.md  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst  peppermining.conformance.violation.rst  peppermining.kpi.rst
docs/_build/doctrees/: environment.pickle  index.doctree  peppermining.conformance.violation.doctree  peppermining.doctree  (+2 more)
docs/doctrees/: environment.pickle  index.doctree  modules.doctree  peppermining.conformance.doctree  peppermining.utils.doctree
docs/html/: genindex.html  modules.html  peppermining.conformance.html  peppermining.conformance.violation.html  peppermining.filters.html  peppermining.html  peppermining.kpi.html  peppermining.utils.html  searchindex.js
docs/quickstart/: PepperMiningQuickstart.ipynb
peppermining/: __init__.py  main.py  pepper.py  peppermining.py
peppermining/conformance/: __init__.py  conformance.py  process_model.py  root_cause_analysis.py
peppermining/filters/: __init__.py  case_activity_filter.py  case_between_time_filter.py  case_end_activity_filter.py  case_filter.py  case_size_filter.py  case_start_activity_filter.py  pepper_filter.py  variant_filter.py
peppermining/kpi/: __init__.py  average_events_per_case.py  number_of_activities.py  number_of_cases.py  number_of_events.py  pepper_kpi.py  rework.py  throughput_time.py
peppermining/utils/: __init__.py  enum.py
src/: __init__.py  pepper.py  peppermining.py
src/conformance/: conformance.py  process_model.py  root_cause_analysis.py
src/filters/: case_activity_filter.py  case_between_time_filter.py  case_end_activity_filter.py  case_filter.py  case_size_filter.py  case_start_activity_filter.py  pepper_filter.py  variant_filter.py
src/kpi/: average_events_per_case.py  number_of_activities.py  number_of_cases.py  number_of_events.py  pepper_kpi.py  rework.py  throughput_time.py
src/variant_explorer/: __init__.py  variant_explorer.py
tests/: test_peppermining.py
tests/data/: case-example.csv  case-example2.csv  case-example3.csv  eventlog-example.csv  pizza_case.csv  pizza_event.csv  processmodel-example.csv
(+88 files in other folders)
