[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "peppermining"
version = "0.0.1"
authors = [
  { name="Thober Detofeno", email="thober@gmail.com" },
]
description = "Pepper Mining is a free process mining"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ThoberDetofeno/peppermining"
"Bug Tracker" = "https://github.com/ThoberDetofeno/peppermining/issues"
