[metadata]
name = peppermining
version = 0.0.1
author = Thober Detofeno
author_email = thober@gmail.com
description = Pepper Mining is a free process mining
long_description = file: README.md
long_description_content_type = text/markdown
url = package url
project_urls =
    Bug Tracker = package issues url
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
